--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "npm-segmentador",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Testeando como hacer un modulo del segmentador",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
